--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,2 @@
-# Byte-compiled / optimized / DLL files
-__pycache__/
-*.py[cod]
-.idea
-.vscode
-.DS_Store
-/example/.project
-/example/.pydevproject
-
-# kbc datafolder
+/vendor
 /data
-/venv
